Removed nav from base and added to includes folder

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,145 +35,9 @@
 
 <body class="d-flex flex-column min-vh-100">
     <header class="container-fluid g-0 nav-container">
-        <div class="nav-wrapper fixed-top">
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand mx-2" href="{% url 'home' %}" aria-label="Click here to go to the home page"></a>
-                <div class="btn navbar-toggler" data="hamburger-menu" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Click to view drop down menu" role="navigation">
-                    <div class="center-svg">
-                        <svg class="ham hamRotate ham1" viewBox="0 0 100 100" onclick="this.classList.toggle('active')">
-                            <path class="line top"
-                                d="m 30,33 h 40 c 0,0 9.044436,-0.654587 9.044436,-8.508902 0,-7.854315 -8.024349,-11.958003 -14.89975,-10.85914 -6.875401,1.098863 -13.637059,4.171617 -13.637059,16.368042 v 40" />
-                            <path class="line middle" d="m 30,50 h 40" />
-                            <path class="line bottom"
-                                d="m 30,67 h 40 c 12.796276,0 15.357889,-11.717785 15.357889,-26.851538 0,-15.133752 -4.786586,-27.274118 -16.667516,-27.274118 -11.88093,0 -18.499247,6.994427 -18.435284,17.125656 l 0.252538,40" />
-                        </svg>
-                    </div>
-                </div>
-                <div class="collapse navbar-collapse mx-3" id="navbarNavAltMarkup">
-                    <ul class="mx-sm-1 mx-auto navbar-nav ">
-                        {% if user.is_superuser %}
-                        <li class="nav-link">
-                            <a class="" href="#">Dashboard</a>
-                        </li>
-                        {% else %}
-                        <li class="nav-link">
-                            <a class="" href="#">About</a>
-                        </li>
-                        <li class="nav-link">
-                            <div class="dropdown">
-                                <a class="dropdown-toggle" href="#" role="button" id="about-dropdown"
-                                    data-toggle="dropdown" aria-expanded="false">
-                                    Contact
-                                </a>
-                                <ul class="dropdown-menu shadow mt-2" aria-labelledby="about-dropdown">
-                                    <li>
-                                        <a class="dropdown-item" href="#">Careers</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-link">
-                            <a href="#">Menu</a>
-                        </li>
-                        <li class="nav-link">
-                            <div class="dropdown">
-                                <a class="dropdown-toggle" href="#" role="button" id="account-dropdown"
-                                    data-toggle="dropdown" aria-expanded="false">
-                                    Reserve
-                                </a>
-                                <ul class="dropdown-menu shadow mt-2" aria-labelledby="account-dropdown">
-                                    <li>
-                                        <a class="dropdown-item" href="#">Book a Table</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="#">Buy Gift Card</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-link">
-                            <a href="#">News</a>
-                        </li>
-                        {% endif %}
-
-                    </ul>
-                    <ul class="mx-auto navbar-nav d-none d-lg-flex">
-                        <li class="nav-link mx-1">
-                            <form class="dropdown">
-                                {% csrf_token %}
-                                <a class="dropdown-toggle" href="#" role="button" id="search-dropdown"
-                                    data-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa-solid fa-magnifying-glass"></i>
-                                </a>
-                                <ul class="dropdown-menu mt-2" aria-labelledby="search-dropdown">
-                                    <input class="dropdown-item form-control"
-                                        type="search" placeholder="Search" aria-label="Search">
-                                </ul>
-                            </form>
-                        </li>
-                        <li class="nav-link mx-1">
-                            <div class="dropdown">
-                                <a class="dropdown-toggle" href="#" role="button" id="login-dropdown"
-                                    data-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa-solid fa-user"></i>
-                                </a>
-                                <ul class="dropdown-menu shadow mt-2" aria-labelledby="login-dropdown">
-                                    <li>
-
-                                    </li>
-                                    {% if user.is_authenticated %}
-                                    <li>
-                                        <a class="dropdown-item" href="{% url 'account_logout' %}"
-                                            aria-label="click here to sign out of FineChop">Sign
-                                            Out</a>
-                                    </li>
-                                    {% else %}
-                                    <li>
-                                        <a class="dropdown-item" href="{% url 'account_login' %}"
-                                            aria-label="click here to login into FineChop">Sign
-                                            In</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="{% url 'account_signup' %}"
-                                            aria-label="click here to sign up to FineChop">Sign
-                                            Up</a>
-                                    </li>
-                                    {% endif %}
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="nav-link mx-1">
-                            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-
-                        </li>
-                    </ul>
-                    <ul class="mx-auto navbar-nav nav-social d-sm-flex d-lg-none flex-row">
-                        <li class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Facebook">
-                            <a href="#" class="text-decoration-none" target="_blank" rel="noopener"
-                                aria-label="Click here to go to our Facebook page"><i
-                                    class=" fa-brands fa-facebook-f"></i></a>
-                        </li>
-                        <li class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Instagram">
-                            <a href="#" class="text-decoration-none" target="_blank" rel="noopener"
-                                aria-label="Click here to go to our Instagram page"><i
-                                    class=" fa-brands fa-instagram"></i></a>
-                        </li>
-                        <li class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Twitter">
-                            <a href="#" class="text-decoration-none" target="_blank" rel="noopener"
-                                aria-label="Click here to go to our Twitter page"><i
-                                    class="fa-brands fa-twitter"></i></a>
-                        </li>
-                        <li class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Call Now">
-                            <a href="tel://0209126583" class="text-decoration-none" target="_blank" rel="noopener"
-                                aria-label="Click here to give us a call"><i class="fa-solid fa-phone"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+        {% include "includes/nav.html" %}
     </header>
+
     {% for message in messages %}
     <div class="container-fluid mt-5 message-container">
         <div class="row">
