Added content for mobile nav view for mobile devices

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -32,6 +32,9 @@
                         </a>
                         <ul class="dropdown-menu shadow mt-2" aria-labelledby="about-dropdown">
                             <li>
+                                <a class="dropdown-item" href="#">Call Now</a>
+                            </li>
+                            <li>
                                 <a class="dropdown-item" href="#">Careers</a>
                             </li>
                         </ul>
