Added mobile nav to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
     </div>
     {% endfor%}
     {% block content %}{% endblock content %}
-
+    {% include "includes/mobile-btm.html"%}
     {% block extra_body %}{% endblock extra_body %}
     {% include "includes/footer.html" %}
     <script src="https://kit.fontawesome.com/0d880835d2.js" crossorigin="anonymous"></script>
