Hide mobile nav on large screens

--- a/templates/includes/mobile-btm.html
+++ b/templates/includes/mobile-btm.html
@@ -1,4 +1,4 @@
-<div class="fixed-bottom mobile-nav-container">
+<div class="fixed-bottom mobile-nav-container d-lg-none">
     <ul class="mobile-nav-view p-0 mx-3">
         <li><a href=""><i class="fa-solid fa-house"></i></a></li>
         <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
