--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -11,6 +11,18 @@
         <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 mt-1">
                 <h1 class="text-center">{% trans "Sign In" %}</h1>
                 <hr/>
+                <p class="text-center">{% blocktrans with site.name as site_name %}Please sign in with one
+                    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+                    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+
+                <div class="socialaccount_ballot">
+
+                    <div class="socialaccount_providers text-center">
+                        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+                    </div>
+                    <div class="login-or text-center fs-4">{% trans 'or' %}</div>
+                </div>
+                <br>
                 <p class="text-center">
                     {% blocktrans %}If you have not created an account yet, then please
         <a href="{{ signup_url }}" class="text-info">sign up</a> first.{% endblocktrans %}
