--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load account socialaccount %}
 {% load crispy_forms_tags %}
 {% block head_title %}
     {% trans "Signup" %}
