--- a/templates/socialaccount/snippets/provider_list.html
+++ b/templates/socialaccount/snippets/provider_list.html
@@ -3,18 +3,16 @@
 {% get_providers as socialaccount_providers %}
 
 {% for provider in socialaccount_providers %}
-{% if provider.id == "openid" %}
-{% for brand in provider.get_brands %}
-<li>
-  <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
-</li>
-{% endfor %}
-{% endif %}
-<li>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-</li>
+<a title="{{provider.name}}" role="button" class="btn socialaccount_provider" 
+     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+     {% if provider.name == 'Google' %}
+      <i class="fa-brands fa-google"></i>
+     {% elif provider.name == 'Facebook' %}
+     <i class="fa-brands fa-facebook"></i>
+     {% elif provider.name == 'Instagram' %}
+     <i class="fa-brands fa-instagram"></i>
+     {% elif provider.name == 'Twitter' %}
+     <i class="fa-brands fa-twitter"></i>
+     {% endif %}
+     </a>
 {% endfor %}
