--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,8 +12,7 @@
                 <h1 class="text-center">{% trans "Sign In" %}</h1>
                 <hr/>
                 <p class="text-center">{% blocktrans with site.name as site_name %}Please sign in with one
-                    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-                    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+                    of your existing third party accounts.{% endblocktrans %}</p>
 
                 <div class="socialaccount_ballot">
 
