--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <meta name="description" content="FineChop - Asian-style restaurant/takeaway service in Dublin City" />
     <meta name="keywords"
-        content="Asian-style, food, order, menu, reservations, reserve, restaurant, dine-in, takeaway, delivery, Thai, Chinese, Korean, voucher, gift" />
+        content="Asian-style food, Asian restaurant, Asian takeaway food, order now, menu, book reservations, reserve
+        table, dine-in experience, deliver food, Thai food, Chinese food, Korean food, buy a voucher, buy a gift card" />
     <meta name="author" content="Kristian Colville" />
     {% comment %} Favicon, Theme, Manifest {% endcomment %}
     <meta name="theme-color" content="#ffbf7d" />
+    <meta name="msapplication-TileColor" content="##ffbf7d">
     <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}" />
     <link rel="icon" type="image/png" sizes="512x512" href="{% static 'img/favicon/android-chrome-512x512.png' %}" />
     <link rel="icon" type="image/png" sizes="192x192" href="{% static 'img/favicon/android-chrome-192x192.png' %}" />
@@ -30,7 +32,7 @@
         rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     {% block extra_css %}{% endblock extra_css %}
-    <title>{% block head_title %}{% endblock head_title %}</title>
+    <title>FineChop - {% block head_title %}{% endblock head_title %}</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
