--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,9 +1,36 @@
 {% extends "base.html" %}
 {% load static %}
-{% block head_title %}FineChop{% endblock head_title %}
+{% load i18n %}
+{% block head_title %}Home{% endblock head_title %}
 {% block content %}
 <div class="home-landing-lg position-relative">
-    <div class="home-overlay"></div>
+        <div class="home-overlay"></div>
     <div class="home-img"></div>
+</div>
+<div class="home-content">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-6 border-right d-flex nowrap flex-column justify-content-center">
+                <h1 class="headings text-center m-0">View our menu</h1>
+                <h2 class="text-center m-0">Order Online</h2>
+                <a href="" class="text-white text-center w-100 m-0">
+                    <p><i class="fa-solid fa-map mx-2"></i> Order A Meal at FineChop</p>
+                </a>
+                <hr class="w-25 mx-auto mt-0 btn-orange">
+                <button class="mt-3 btn btn-orange shadow text-white mx-auto text-capitalize"><i
+                        class="fa-solid fa-angles-right mx-2"></i> Order Now</button>
+            </div>
+            <div class="col-sm-12 col-lg-6 border-left d-flex nowrap flex-column justify-content-center">
+                <h1 class="headings text-center m-0">Learn More</h1>
+                <h2 class="text-center m-0">About FineChop</h2>
+                <a href="" class="text-white text-center w-100">
+                    <p><i class="fa-regular fa-newspaper mx-2"></i> View latest News About FineChop</p>
+                </a>
+                <hr class="w-25 mx-auto mt-0 btn-orange">
+                <button class="mt-3 btn btn-orange shadow text-white mx-auto text-capitalize"><i
+                        class="fa-solid fa-angles-right mx-2"></i> More about us</button>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
