--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,9 @@
 {% block content %}
 <div class="home-landing-lg position-relative">
         <div class="home-overlay"></div>
-    <div class="home-img"></div>
+    <div id="home-bg-slideshow">
+        {% comment %}Adds images to background of homepage{% endcomment%}
+    </div>
 </div>
 <div class="home-content">
     <div class="container">
@@ -14,7 +16,7 @@
                 <h1 class="headings text-center m-0">View our menu</h1>
                 <h2 class="text-center m-0">Order Online</h2>
                 <a href="" class="text-white text-center w-100 m-0">
-                    <p><i class="fa-solid fa-map mx-2"></i> Order A Meal at FineChop</p>
+                    <p class="m-0 home-top-link"><i class="fa-solid fa-map mx-2"></i> Order A Meal at FineChop</p>
                 </a>
                 <hr class="w-25 mx-auto mt-0 btn-orange">
                 <button class="mt-3 btn btn-orange shadow text-white mx-auto text-capitalize"><i
@@ -24,7 +26,8 @@
                 <h1 class="headings text-center m-0">Learn More</h1>
                 <h2 class="text-center m-0">About FineChop</h2>
                 <a href="" class="text-white text-center w-100">
-                    <p><i class="fa-regular fa-newspaper mx-2"></i> View latest News About FineChop</p>
+                    <p class="m-0 home-top-link"><i class="fa-regular fa-newspaper mx-2"></i> View latest News About
+                        FineChop</p>
                 </a>
                 <hr class="w-25 mx-auto mt-0 btn-orange">
                 <button class="mt-3 btn btn-orange shadow text-white mx-auto text-capitalize"><i
@@ -34,3 +37,8 @@
     </div>
 </div>
 {% endblock content %}
+{% block extra_js %}
+<script src="{% static 'home/js/background.js' %}">
+    
+</script>
+{% endblock extra_js %}
