Fix page scrolling behaviour when nav elements clicked

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -18,49 +18,49 @@
             <ul class="mx-sm-1 mx-auto navbar-nav ">
                 {% if user.is_superuser %}
                 <li class="nav-link">
-                    <a class="" href="#">Dashboard</a>
+                    <a class="" href="#!">Dashboard</a>
                 </li>
                 {% else %}
                 <li class="nav-link">
-                    <a class="" href="#">About</a>
+                    <a class="" href="#!">About</a>
                 </li>
                 <li class="nav-link">
                     <div class="dropdown">
-                        <a class="dropdown-toggle" href="#" role="button" id="about-dropdown" data-toggle="dropdown"
+                        <a class="dropdown-toggle" href="#!" role="button" id="about-dropdown" data-toggle="dropdown"
                             aria-expanded="false">
                             Contact
                         </a>
                         <ul class="dropdown-menu shadow mt-2" aria-labelledby="about-dropdown">
                             <li>
-                                <a class="dropdown-item" href="#">Call Now</a>
+                                <a class="dropdown-item" href="#!">Call Now</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">Careers</a>
+                                <a class="dropdown-item" href="#!">Careers</a>
                             </li>
                         </ul>
                     </div>
                 </li>
                 <li class="nav-link">
-                    <a href="#">Menu</a>
+                    <a href="#!">Menu</a>
                 </li>
                 <li class="nav-link">
                     <div class="dropdown">
-                        <a class="dropdown-toggle" href="#" role="button" id="account-dropdown" data-toggle="dropdown"
+                        <a class="dropdown-toggle" href="#!" role="button" id="account-dropdown" data-toggle="dropdown"
                             aria-expanded="false">
                             Reserve
                         </a>
                         <ul class="dropdown-menu shadow mt-2" aria-labelledby="account-dropdown">
                             <li>
-                                <a class="dropdown-item" href="#">Book a Table</a>
+                                <a class="dropdown-item" href="#!">Book a Table</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">Buy Gift Card</a>
+                                <a class="dropdown-item" href="#!">Buy Gift Card</a>
                             </li>
                         </ul>
                     </div>
                 </li>
                 <li class="nav-link">
-                    <a href="#">News</a>
+                    <a href="#!">News</a>
                 </li>
                 {% endif %}
 
