--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,12 +110,6 @@ nav {
     background-color: var(--mellow-apricot);
 }
 
-.bg-orange {
-    text-align: center;
-    background-color: var(--yellow-orange-color-wheel);
-    cursor: pointer;
-}
-
 /* mobile nav view */
 
 .mobile-nav-container {
@@ -137,7 +131,7 @@ nav {
 .mobile-nav-view li,
 .mobile-nav-view li a,
 .mobile-nav-view li button,
-.movile-nav-view li a i {
+.mobile-nav-view li a i {
     font-size: 22px;
     color: white;
     text-shadow: 1px 1px 1px var(--matte-black);
@@ -277,14 +271,12 @@ nav {
 .home-overlay {
     position: absolute;
     background-color: var(--onyx);
-    opacity: 0.5;
+    opacity: 0.45;
 }
 
-.home-img {
+#home-bg-slideshow {
     width: 100%;
     height: 100%;
-    background: url('../img/home-page/home-2.webp') no-repeat center center;
-    background-size: cover;
 }
 
 .headings {
@@ -314,6 +306,12 @@ nav {
 .btn-orange {
     background-color: var(--yellow-orange-color-wheel);
     font-size: 20px;
+    text-shadow: 1px 1px 1px var(--matte-black);
+}
+
+.btn-orange:hover,
+.btn-orange:active {
+    background-color: var(--mellow-apricot);
 }
 
 /* -------------------------------------------------------Footer */
@@ -473,13 +471,16 @@ h1 {
     .navbar .nav-link {
         margin-left: 10px;
     }
+
     .border-left,
     .border-right {
         border: none;
     }
+
     .home-content>.container {
-        margin-top: 15vh;
+        margin-top: 20vh;
     }
+
     .border-left {
         margin-top: 90px;
     }
@@ -487,10 +488,8 @@ h1 {
 
 @media only screen and (max-width: 768px){
     .border-left {
-        margin-top: 70px;
+        margin-top: 90px;
     }
-
-    
 }
 
 @media only screen and (max-width: 575px) {
@@ -525,17 +524,22 @@ h1 {
     .footer-logo {
         width: 250px;
     }
+    .headings {
+        font-size: 14px;
+    }
 
+    .headings~h2 {
+        font-size: 25px;
+    }
+
+    .home-top-link {
+        font-size: 12px;
+    }
 
 }
 
 @media only screen and (max-width: 375px){
-    .headings {
-        font-size: 16px;
-    }
-    .headings~h2 {
-        font-size: 25px;
-    }
+
 
 }
 @media only screen and (max-width: 363px) {
