Added about page and set up for content

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -22,7 +22,7 @@
                 </li>
                 {% else %}
                 <li class="nav-link">
-                    <a class="" href="#!">About</a>
+                    <a class="" href="{% url 'about' %}">About</a>
                 </li>
                 <li class="nav-link">
                     <div class="dropdown">
