--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -55,7 +55,8 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4">
             <h1 class="fs-4">Info</h1>
             <ul class="mt-3">
-                <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
+                <li><a class="text-decoration-none" href="{% url 'about' %}" target="_blank"
+                        rel="noopener"
                         aria-label="Click here to discover how we built this business in the about section">About
                         Us</a>
                 </li>
