--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -17,11 +17,89 @@
             </div>
         </div>
     </div>
-    <div class="container mt-5">
+
+    <div class="container-fluid about-philosophy py-5">
         <div class="row">
-            <div class="col-sm-12 col-md-4 offset-md-1">
+            <div class="col-sm-12 col-md-5 offset-md-1">
                 <h1 class="headings">finechop</h1>
                 <h2 class="">Our philosophy </h2>
+                <hr>
+                <p class="text-justify w-100">
+                    <strong>It is our pleasure to serve you authentic Asian food at FineChop Restaurant. We deliver to
+                        you the
+                        flavours, textures, and aromas of Asian cuisine.</strong>
+
+                </p>
+                <p class="text-justify w-100">
+                    Enjoy the flavours of the delectable meals that our crew from Thailand, China, Korea and Japan
+                    have worked so hard to prepare. Many local customers have fallen in love with the restaurant's
+                    savoury, delectable food, and they return frequently. It is our mission to frequently improve our
+                    standards
+                    by listening to our customers taste buds.
+                </p>
+                <p class="text-justify w-100">You may enjoy our delicious, authentic Asian food in a lively, modern
+                    setting for fair prices. This is how we ate dinner at home: we brought FineChop from the streets of
+                    Asia to the countryside of Ireland. We value the artistic expression of our culture and are
+                    confident that it will please the senses. Therefore, close your eyes, pay attention, take in the
+                    aromas of Asia, and most importantly, taste them.</p>
+            </div>
+            <div class="col-sm-12 col-md-5 pt-4">
+                <div id="about-section-images" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="{% static '/img/home-page/about-1.webp' %}"
+                                class="d-block w-100 shadow border rounded"
+                                alt="Thai tofu noodle dish with lime and chop sticks">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{% static '/img/home-page/about-2.webp' %}"
+                                class="d-block w-100 shadow border rounded" alt="Chinese sticky rice with chicken">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{% static '/img/home-page/about-3.webp' %}"
+                                class="d-block w-100 shadow border rounded"
+                                alt="Japanese sushi dish inspired by the Korean spice palette">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid about-order-now">
+        <div class="row py-4">
+            <div class="col-sm-12 col-md-4 offset-md-4 text-center">
+                <h1 class="headings">FineChop</h1>
+                <h2 class="headings">Order Online</h2>
+                <button class="btn btn-orange w-100">Browse Menu</button>
+            </div>
+
+        </div>
+    </div>
+    <div class="container-fluid about-reviews py-5">
+        <div class="row">
+            <div class="col-sm-12 col-md-4 offset-md-4 text-center">
+                <i class="fa-solid fa-user-check fs-4"></i>
+                <h1 class="headings">Reviews</h1>
+                <h2 class="headings">Testimonials</h2>
+                <div id="reviews" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                ut labore et dolore magna aliqua.  Excepteur
+                                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                                est laborum" - <strong>Username</strong></p>
+                        </div>
+                        <div class="carousel-item">
+                            <p> "Ut enim ad minim veniam, quis nostrud exercitation
+                                ullamco laboris nisi ut aliquip ex ea commodo consequat" - <strong>Username</strong></p>
+                        </div>
+                        <div class="carousel-item">
+                            <p>"Duis aute irure dolor in
+                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur" -
+                                <strong>Username</strong></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
