--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -47,16 +47,16 @@
                 <div id="about-section-images" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="{% static '/img/home-page/about-1.webp' %}"
+                            <img src="{% static 'img/home-page/about-1.webp' %}"
                                 class="d-block w-100 shadow border rounded"
                                 alt="Thai tofu noodle dish with lime and chop sticks">
                         </div>
                         <div class="carousel-item">
-                            <img src="{% static '/img/home-page/about-2.webp' %}"
+                            <img src="{% static 'img/home-page/about-2.webp' %}"
                                 class="d-block w-100 shadow border rounded" alt="Chinese sticky rice with chicken">
                         </div>
                         <div class="carousel-item">
-                            <img src="{% static '/img/home-page/about-3.webp' %}"
+                            <img src="{% static 'img/home-page/about-3.webp' %}"
                                 class="d-block w-100 shadow border rounded"
                                 alt="Japanese sushi dish inspired by the Korean spice palette">
                         </div>
