--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 {% block head_title %}Home{% endblock head_title %}
 {% block content %}
 <div class="home-landing-lg position-relative">
@@ -32,6 +33,26 @@
                 <hr class="w-25 mx-auto mt-0 btn-orange">
                 <button class="mt-3 btn btn-orange shadow text-white mx-auto text-capitalize"><i
                         class="fa-solid fa-angles-right mx-2"></i> More about us</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="bg-gradient py-2">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-7 offset-md-1 pt-5">
+            <h1 class="w-100 text-center">Subscribe for the latest News and Offers</h1>
+            <form enctype="multipart/form-data" method="post" action="">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <label for="id_email_field" placeholder="Email" hidden><a class="visually-hidden-focusable"
+                        href="#content">Skip to main
+                        content</a></label>
+                <input type="email" name="email_field" id="id_email_field" class="w-100 rounded shadow p-1"
+                    placeholder=" Enter your email address" required>
+                <button id="id_submit" name="submit" value="Subscribe" type="submit"
+                    class="btn btn-orange p-1 mt-1 shadow">Subscribe</button>
+            </form>
             </div>
         </div>
     </div>
