--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,12 +1,13 @@
 {% load static %}
 {% block content%}
 {% comment %} Footer {% endcomment %}
-<footer class="container-fluid mt-auto py-5">
+<footer class="container mt-auto py-5">
     <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 d-flex flex-column align-items-center">
-            <img src="{% static 'img/design/logo-no-background.svg' %}" alt="FineChop brand logo" class="footer-logo">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-5">
+            <img src="{% static 'img/design/logo-no-background.svg' %}" alt="FineChop brand logo" class="footer-logo"
+                height="80">
             <div class="footer-links my-4">
-                <ul class="col-12 social-links">
+                <ul class="col-12 social-links p-0">
                     <li class="mx-1">
                         <a href="#" class="text-decoration-none mx-2" target="_blank" rel="noopener"
                             aria-label="Click here to go to our Facebook page"><i class="
@@ -24,13 +25,12 @@
                             aria-label="Click here to give us a call"><i class="fa-solid fa-phone"></i></a>
                     </li>
                 </ul>
-
             </div>
             <p class="text-justify"><strong>FineChop</strong> has the pleasure of serving popular and authentic Asian
                 dishes. We aim to bring
                 you the best meals whether you order online or dine in.</p>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4 support-icons">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 mt-4">
             <h1 class="fs-4">Support</h1>
             <ul>
                 <li><a class="text-decoration-none" href="tel://0209126583" target="_blank" rel="noopener"
@@ -38,25 +38,18 @@
                         020-912-6583</a>
                 </li>
                 <li><a class="text-decoration-none" href="mailto://" target="_blank" rel="noopener"
-                        aria-label="Click here to call FineChop"><i class="fa-solid fa-envelope mr-2"></i> put
+                        aria-label="Click here to call FineChop"><i class="fa-solid fa-envelope mr-2"></i>
+                        put
                         email
                         here</a>
                 </li>
-                <li>
-                    <iframe title="google-maps"
-                        aria-label="This is a small google maps frame that you can use to find FineChop"
-                        id="google-maps"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53884.04251178832!2d-6.313688999065799!3d53.3546985911072!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486711faed4864bf%3A0x300c7acf18002c0!2sDublin%20City%2C%20Co.%20Dublin!5e0!3m2!1sen!2sie!4v1642804491173!5m2!1sen!2sie"
-                        allowfullscreen="" loading="lazy"
-                        class="mt-5 w-100 rounded shadow"></iframe>
-                </li>
+
             </ul>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 my-5">
             <h1 class="fs-4">Info</h1>
             <ul class="mt-3">
-                <li><a class="text-decoration-none" href="{% url 'about' %}" target="_blank"
-                        rel="noopener"
+                <li><a class="text-decoration-none" href="{% url 'about' %}" target="_blank" rel="noopener"
                         aria-label="Click here to discover how we built this business in the about section">About
                         Us</a>
                 </li>
@@ -72,22 +65,15 @@
                 <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
                         aria-label="Click to view privacy policy">Privacy Policy</a>
                 </li>
-            </ul>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4">
-            <p class="w-100 text-center"><i class="fa-regular fa-envelope mr-2"></i> Subscribe to stay up to date on the latest from
-                <strong>FineChop</strong></p>
-            <form enctype="multipart/form-data" method="post" action="/newsletter/[NAME-OF-NEWSLETTER]/subscribe/">
-                {% csrf_token %}
-                <label for="id_email_field" placeholder="Email" hidden><a class="visually-hidden-focusable" href="#content">Skip to main
-                        content</a></label>
-                <input type="email" name="email_field" id="id_email_field" class="w-100 text-center rounded mb-1" placeholder="Enter your email address"required>
-                <button id="id_submit" name="submit" value="Subscribe" type="submit" class="btn btn-primary w-100">Subscribe</button>
-            </form>
-            <p class="w-100 text-center mt-5">&copy; Created by <strong><a class="text-decoration-none copyright"
-                        href="https://github.com/KristianColville1" target="_blank" rel="noopener" aria-label="Click here to view Kristian Colville GitHub
+                <li>
+                    <p class="w-100">&copy; Created by <strong><a class="text-decoration-none copyright"
+                                href="https://github.com/KristianColville1" target="_blank" rel="noopener" aria-label="Click here to view Kristian Colville GitHub
                         profile">Kristian Colville <i class="fa-brands fa-github"></i></a>
-                </strong></p>
+                        </strong></p>
+                </li>
+            </ul>
+
+
         </div>
     </div>
 </footer>
