--- a/menu/templates/menu/includes/food-menu.html
+++ b/menu/templates/menu/includes/food-menu.html
@@ -1,35 +1,13 @@
-<ul class="nav nav-tabs justify-content-center">
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='starters' %}">Starters</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='mains' %}">Mains</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='noodles' %}">Noodles</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='rices' %}">Rices</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='wok' %}">Wok</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='curries' %}">Curries</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='soups' %}">Soups</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='vegan' %}">Vegan</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='salads' %}">Salads</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='kids_menu' %}">Kids Menu</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'food_menu' str='drinks' %}">Drinks</a>
-    </li>
-</ul>
+<div class="horizontal-scroll-food-menu text-center shadow">
+    <a class="nav-link" href="{% url 'food_menu' str='starters' %}">Starters</a>
+    <a class="nav-link" href="{% url 'food_menu' str='mains' %}">Mains</a>
+    <a class="nav-link" href="{% url 'food_menu' str='noodles' %}">Noodles</a>
+    <a class="nav-link" href="{% url 'food_menu' str='rices' %}">Rices</a>
+    <a class="nav-link" href="{% url 'food_menu' str='wok' %}">Wok</a>
+    <a class="nav-link" href="{% url 'food_menu' str='curries' %}">Curries</a>
+    <a class="nav-link" href="{% url 'food_menu' str='soups' %}">Soups</a>
+    <a class="nav-link" href="{% url 'food_menu' str='vegan' %}">Vegan</a>
+    <a class="nav-link" href="{% url 'food_menu' str='salads' %}">Salads</a>
+    <a class="nav-link" href="{% url 'food_menu' str='kids_menu' %}">Kids Menu</a>
+    <a class="nav-link" href="{% url 'food_menu' str='drinks' %}">Drinks</a>
+</div>
