--- a/menu/templates/menu/includes/food-menu.html
+++ b/menu/templates/menu/includes/food-menu.html
@@ -1,13 +1,4 @@
 <div class="horizontal-scroll-food-menu text-center shadow">
-    <a class="nav-link starters" href="{% url 'food_menu' str='starters' %}">Starters</a>
-    <a class="nav-link mains" href="{% url 'food_menu' str='mains' %}">Mains</a>
-    <a class="nav-link noodles" href="{% url 'food_menu' str='noodles' %}">Noodles</a>
-    <a class="nav-link rices" href="{% url 'food_menu' str='rices' %}">Rices</a>
-    <a class="nav-link wok" href="{% url 'food_menu' str='wok' %}">Wok</a>
-    <a class="nav-link curries" href="{% url 'food_menu' str='curries' %}">Curries</a>
-    <a class="nav-link soups" href="{% url 'food_menu' str='soups' %}">Soups</a>
-    <a class="nav-link vegan" href="{% url 'food_menu' str='vegan' %}">Vegan</a>
-    <a class="nav-link salads" href="{% url 'food_menu' str='salads' %}">Salads</a>
-    <a class="nav-link kids_menu" href="{% url 'food_menu' str='kids_menu' %}">Kids Menu</a>
-    <a class="nav-link drinks" href="{% url 'food_menu' str='drinks' %}">Drinks</a>
+    {% for category in categories%}<a class="nav-link {{category.friendly_name|lower}}"
+        href="{% url 'food_menu' category.name|lower %}">{{category.friendly_name}}</a>{% endfor %}
 </div>
