--- a/menu/templates/menu/menu-all.html
+++ b/menu/templates/menu/menu-all.html
@@ -4,7 +4,7 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'menu/css/menu.css' %}">{% endblock extra_css %}
-{% block head_title %}Menu{% endblock head_title %}
+{% block head_title %}Menu - All{% endblock head_title %}
 {% block content %}
 <div class="menu-spacer">
     {% comment %} provides spacing for the fixed food menu and containers {% endcomment%}
@@ -22,15 +22,15 @@
                 <div class="row mt-1 mb-2"></div>
                 <div class="row">
                     {% for food in menu_items %}
-                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 ">
                         <div class="card h-100 border-0">
                             {% if food.image %}
-                            <a href="">
+                            <a href="{% url 'item_details' food.name food.id %}">
                                 <img class="card-img-top img-fluid" src="{{ food.image.url }}"
                                     alt="{{ food.name }}">
                             </a>
                             {% elif food.image == '' %}
-                            <a href="">
+                            <a href="{% url 'item_details' food.name food.id %}">
                                 <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.webp"
                                     alt="{{ food.name }}">
                             </a>
